Punto 4 arreglado